--- a/src/presentation/TaskProcessor.Presentation.csproj
+++ b/src/presentation/TaskProcessor.Presentation.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\core\TaskProcessor.Core.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
