--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,17 +5,20 @@
 
   <ItemGroup>
     <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageVersion Include="FastEndpoints" Version="5.8.0" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageVersion Include="MassTransit" Version="8.0.13" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageVersion Include="ReportGenerator" Version="5.1.13" />
     <PackageVersion Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageVersion Include="SQLite" Version="3.13.0" />
