--- a/src/infrastructure/TaskProcessor.Infrastructure.csproj
+++ b/src/infrastructure/TaskProcessor.Infrastructure.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="MassTransit" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
   </ItemGroup>
