--- a/src/presentation/TaskProcessor.Presentation.csproj
+++ b/src/presentation/TaskProcessor.Presentation.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\core\TaskProcessor.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FastEndpoints" />
+  </ItemGroup>
+
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
