--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,11 +9,11 @@
     <PackageVersion Include="MassTransit" Version="8.0.13" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageVersion Include="MediatR" Version="12.0.1" />
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
+	<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+	<PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
