--- a/src/core/TaskProcessor.Core.csproj
+++ b/src/core/TaskProcessor.Core.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <PackageReference Include="FluentValidation.AspNetCore" />
     <PackageReference Include="MediatR" />
+    <PackageReference Include="OneOf" />
   </ItemGroup>
 
 </Project>
