--- a/sample/domain/TaskProcessor.Domain.csproj
+++ b/sample/domain/TaskProcessor.Domain.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TaskProcessor.Shared\TaskProcessor.Shared.csproj" />
+    <ProjectReference Include="..\..\src\shared\TaskProcessor.Shared.csproj" />
   </ItemGroup>
 
 </Project>
