--- a/src/shared/TaskProcessor.Shared.csproj
+++ b/src/shared/TaskProcessor.Shared.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="OneOf" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>TaskProcessor.Shared.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
