--- a/sample/presentation/TaskProcessor.Presentation.csproj
+++ b/sample/presentation/TaskProcessor.Presentation.csproj
@@ -8,6 +8,10 @@
     <ProjectReference Include="..\domain\TaskProcessor.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
