more unit test to TaskDispatcher implementation

--- a/sample/infrastructure/TaskProcessor.Infrastructure.csproj
+++ b/sample/infrastructure/TaskProcessor.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\domain\TaskProcessor.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
 </Project>
