--- a/src/TaskProcessor.csproj
+++ b/src/TaskProcessor.csproj
@@ -7,18 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="HttpWrapper.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MediatR" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
-    <PackageReference Include="OneOf" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="OneOf" Version="3.0.243" />
+	  <PackageReference Include="OneOf.SourceGenerator" Version="3.0.243" />
   </ItemGroup>
 
 	<ItemGroup>
 		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-			<_Parameter1>TaskProcessor.UnitTests</_Parameter1>
+			<_Parameter1>$(MSBuildProjectName).UnitTests</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
 
