--- a/src/TaskProcessor.csproj
+++ b/src/TaskProcessor.csproj
@@ -4,12 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
+	<ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
   </PropertyGroup>
 
   <ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 	  <PackageReference Include="OneOf" Version="3.0.243" />
-	  <PackageReference Include="OneOf.SourceGenerator" Version="3.0.243" />
   </ItemGroup>
 
 	<ItemGroup>
