--- a/test/TaskProcessor.UnitTests.csproj
+++ b/test/TaskProcessor.UnitTests.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
 	<PackageReference Include="FluentAssertions" Version="6.11.0" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 	<PackageReference Include="Moq" Version="4.18.4" />
@@ -19,14 +19,14 @@
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  <PrivateAssets>all</PrivateAssets>
 	</PackageReference>
-	<PackageReference Include="coverlet.collector" Version="3.2.0">
+	<PackageReference Include="coverlet.collector" Version="6.0.0">
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  <PrivateAssets>all</PrivateAssets>
 	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TaskProcessor\TaskProcessor.csproj" />
+    <ProjectReference Include="..\src\TaskProcessor.csproj" />
   </ItemGroup>
 
 </Project>
